--- a/pages/_includes/authors.html
+++ b/pages/_includes/authors.html
@@ -7,6 +7,8 @@
     </thead>
     <tbody>
       <tr><td>Nathan Davis</td><td>Intermountain Healthcare</td><td>Nathan.Davis2@imail.org</td></tr>
+      <tr><td>Susan Matney</td><td>Intermountain Healthcare</td><td>Susan.Matney@imail.org</td></tr>
+      <tr><td>Ning Zhuo</td><td>Intermountain Healthcare</td><td>Ning.Zhuo@imail.org</td></tr>
     </tbody>
   </table>
 </div>
