--- a/pages/_includes/background.html
+++ b/pages/_includes/background.html
@@ -1,8 +1,8 @@
 <div>
-  <h2>Healthcare Services Platform Consortium Lab Implementation Guide(IG)</h2>
+  <h2>Clinical Information Modeling Initiative Vital Signs Implementation Guide(IG)</h2>
   <h3> Background </h3>
   <p>
-    Background information about HSPC and this LOINC lab implementation guide will be added in the future.
+    The Clinical Information Modeling Initiative created this implementation guide to promote the use and adoption of a set of logical data structures and panels, represented as FHIR profiles for vital signs.  The CIMI Vital Signs Panel includes height, body length, weight, blood pressure, body tempoerature, head circumference, body mass index, heart rate, respiratory rate, and oxygen staturation in arterial blood by pulse oximetry (SPO2).  More background to be added later.
   </p>
 </div>
 
