--- a/pages/_includes/references.html
+++ b/pages/_includes/references.html
@@ -10,7 +10,7 @@
   <tbody>
     <tr>
       <td>  
-Helthcare Services Platform Consortium........
+Clinical Information Modeling Initiative........
       </td>
     </tr>
   </tbody>
