fixing bugs in html

--- a/pages/_includes/footer.html
+++ b/pages/_includes/footer.html
@@ -29,6 +29,8 @@
   <!-- disqus -->
   <!-- end disqus -->
 
+  <div igtool="footer"></div>
+
   <div id="segment-post-footer" class="segment hidden">
     <!-- segment-post-footer -->
     <div class="container">
