updates to support tabbed data

--- a/pages/_includes/footer.html
+++ b/pages/_includes/footer.html
@@ -1,5 +1,5 @@
 
-  <div id="segment-footer" class="segment">
+  <div id="segment-footer" class="segment" igtool="footer">
     <!-- segment-footer -->
     <div class="container">
       <!-- container -->
@@ -29,8 +29,6 @@
   <!-- disqus -->
   <!-- end disqus -->
 
-  <div igtool="footer"></div>
-
   <div id="segment-post-footer" class="segment hidden">
     <!-- segment-post-footer -->
     <div class="container">
@@ -46,7 +44,7 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="jquery-3.2.1.min.js"> </script>
   <!-- note keep space here, otherwise it will be transformed to empty tag -> fails -->
-  <script src="jquery-ui.min.js"> </script>
+  <script src="assets/js/jquery-ui.min.js"> </script>
   <script src="dist/js/bootstrap.min.js"> </script>
   <script src="assets/js/respond.min.js"> </script>
 
