--- a/pages/_includes/profiles.html
+++ b/pages/_includes/profiles.html
@@ -9,7 +9,7 @@
     </thead>
     <tbody>
       <tr>
-        <td><a href="StructureDefinition-">whatever</a></td>
+        <td><a href="url">profile</a></td>
       </tr>
     </tbody>
   </table>
