--- a/pages/_includes/value-sets.html
+++ b/pages/_includes/value-sets.html
@@ -1,20 +1,32 @@
 <div>
-  <p>This guide references the following value sets.</p>
-
-  <table class="grid">
-    <thead>
-      <tr>
-        <th width="20%">Value Set Name</th>
-        <th>Descripton</th>
-        <th>url</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>name</td>
-        <td>description.</td>
-        <td><a href="url">url</a></td>
-      </tr>
-    </tbody>
-  </table>
+<p>This guide references the following value sets.</p>
+<p>
+<a href="ValueSet-abnIntNumericNom.html">abnIntNumericNom</a><br/>
+<a href="ValueSet-bodyPositionVS.html">bodyPositionVS</a><br/>
+<a href="ValueSet-bodyTempMeasBodyLocationPrecoordVS.html">bodyTempMeasBodyLocationPrecoordVS</a><br/>
+<a href="ValueSet-bodyTempMeasMethodDeviceVS.html">bodyTempMeasMethodDeviceVS</a><br/>
+<a href="ValueSet-bodyWeightMeasurementAssociatedPrecondVS.html">bodyWeightMeasurementAssociatedPrecondVS</a><br/>
+<a href="ValueSet-bpCuffSizeVS.html">bpCuffSizeVS</a><br/>
+<a href="ValueSet-bpMeasDeviceVS.html">bpMeasDeviceVS</a><br/>
+<a href="ValueSet-bpMeasMethodVS.html">bpMeasMethodVS</a><br/>
+<a href="ValueSet-bpbodyposition.html">bpbodyposition</a><br/>
+<a href="ValueSet-bpmeasbodylocationprecoord.html">bpmeasbodylocationprecoord</a><br/>
+<a href="ValueSet-dataOriginationModeVS.html">dataOriginationModeVS</a><br/>
+<a href="ValueSet-definedLimitsVS.html">definedLimitsVS</a><br/>
+<a href="ValueSet-deltaFlagnumericNom.html">deltaFlagnumericNom</a><br/>
+<a href="ValueSet-heartRateMeasBodyLocationPrecoordVS.html">heartRateMeasBodyLocationPrecoordVS</a><br/>
+<a href="ValueSet-heartRateMeasDeviceVS.html">heartRateMeasDeviceVS</a><br/>
+<a href="ValueSet-heartRateMeasMethodVS.html">heartRateMeasMethodVS</a><br/>
+<a href="ValueSet-heightBodyPositionVS.html">heightBodyPositionVS</a><br/>
+<a href="ValueSet-heightLengthMeasDeviceVS.html">heightLengthMeasDeviceVS</a><br/>
+<a href="ValueSet-heightLengthMeasMethodVS.html">heightLengthMeasMethodVS</a><br/>
+<a href="ValueSet-respiratoryRateMeasDeviceVS.html">respiratoryRateMeasDeviceVS</a><br/>
+<a href="ValueSet-respiratoryRateMeasMethodVS.html">respiratoryRateMeasMethodVS</a><br/>
+<a href="ValueSet-sPO2BodyLocationVS.html">sPO2BodyLocationVS</a><br/>
+<a href="ValueSet-sensorDescriptionVS.html">sensorDescriptionVS</a><br/>
+<a href="ValueSet-sleepStatusVS.html">sleepStatusVS</a><br/>
+<a href="ValueSet-vitalSignAssociatedPrecondVS.html">vitalSignAssociatedPrecondVS</a><br/>
+<a href="ValueSet-weightMeasurementDeviceVS.html">weightMeasurementDeviceVS</a><br/>
+<a href="ValueSet-weightMeasurementMethodVS.html">weightMeasurementMethodVS</a><br/>
+</p>
 </div>
