update to profile list

--- a/pages/_includes/profiles.html
+++ b/pages/_includes/profiles.html
@@ -16,15 +16,13 @@
 <a href="StructureDefinition-RespiratoryRateMeas-definitions.html">RespiratoryRateMeas</a><br/>
 <a href="StructureDefinition-SystolicBloodPressureMeas-definitions.html">SystolicBloodPressureMeas</a><br/>
 <a href="StructureDefinition-associatedPrecondition-definitions.html">associatedPrecondition</a><br/>
-<a href="StructureDefinition-bodyLaterality-definitions.html">bodyLaterality</a><br/>
-<a href="StructureDefinition-bodyLocationQualifier-definitions.html">bodyLocationQualifier</a><br/>
 <a href="StructureDefinition-bodyPosition-definitions.html">bodyPosition</a><br/>
-<a href="StructureDefinition-bodySide-definitions.html">bodySide</a><br/>
 <a href="StructureDefinition-bpCuffSize-definitions.html">bpCuffSize</a><br/>
 <a href="StructureDefinition-dataAbsentReason-definitions.html">dataAbsentReason</a><br/>
 <a href="StructureDefinition-dataOriginationMode-definitions.html">dataOriginationMode</a><br/>
 <a href="StructureDefinition-deltaFlag-definitions.html">deltaFlag</a><br/>
 <a href="StructureDefinition-device-definitions.html">device</a><br/>
+<a href="StructureDefinition-estimatedInd-definitions.html">estimatedInd</a><br/>
 <a href="StructureDefinition-focalSubject-definitions.html">focalSubject</a><br/>
 <a href="StructureDefinition-measurementDevice-definitions.html">measurementDevice</a><br/>
 <a href="StructureDefinition-methodDevice-definitions.html">methodDevice</a><br/>
