Updating pages to refine IG

--- a/pages/_includes/profiles.html
+++ b/pages/_includes/profiles.html
@@ -7,6 +7,7 @@
 <a href="StructureDefinition-BodyTemperatureMeas-definitions.html">BodyTemperatureMeas</a><br/>
 <a href="StructureDefinition-BodyWeightMeas-definitions.html">BodyWeightMeas</a><br/>
 <a href="StructureDefinition-DiastolicBloodPressureMeas-definitions.html">DiastolicBloodPressureMeas</a><br/>
+<a href="StructureDefinition-DiastolicBloodPressure24HourMeanMeas-definitions.html">DiastolicBloodPressure24HourMeanMeas</a><br/>
 <a href="StructureDefinition-HL7FHIRVitalSignsPanel-definitions.html">HL7FHIRVitalSignsPanel</a><br/>
 <a href="StructureDefinition-HeadOccipitalFrontalCircumference-definitions.html">HeadOccipitalFrontalCircumference</a><br/>
 <a href="StructureDefinition-HeartRateMeas-definitions.html">HeartRateMeas</a><br/>
@@ -15,18 +16,6 @@
 <a href="StructureDefinition-OxygenSaturationArterialBloodMeas-definitions.html">OxygenSaturationArterialBloodMeas</a><br/>
 <a href="StructureDefinition-RespiratoryRateMeas-definitions.html">RespiratoryRateMeas</a><br/>
 <a href="StructureDefinition-SystolicBloodPressureMeas-definitions.html">SystolicBloodPressureMeas</a><br/>
-<a href="StructureDefinition-associatedPrecondition-definitions.html">associatedPrecondition</a><br/>
-<a href="StructureDefinition-bodyPosition-definitions.html">bodyPosition</a><br/>
-<a href="StructureDefinition-bpCuffSize-definitions.html">bpCuffSize</a><br/>
-<a href="StructureDefinition-dataAbsentReason-definitions.html">dataAbsentReason</a><br/>
-<a href="StructureDefinition-dataOriginationMode-definitions.html">dataOriginationMode</a><br/>
-<a href="StructureDefinition-deltaFlag-definitions.html">deltaFlag</a><br/>
-<a href="StructureDefinition-device-definitions.html">device</a><br/>
-<a href="StructureDefinition-estimatedInd-definitions.html">estimatedInd</a><br/>
-<a href="StructureDefinition-focalSubject-definitions.html">focalSubject</a><br/>
-<a href="StructureDefinition-measurementDevice-definitions.html">measurementDevice</a><br/>
-<a href="StructureDefinition-methodDevice-definitions.html">methodDevice</a><br/>
-<a href="StructureDefinition-sensorDescription-definitions.html">sensorDescription</a><br/>
-<a href="StructureDefinition-sleepStatus-definitions.html">sleepStatus</a><br/>
+<a href="StructureDefinition-SystolicBloodPressure24HourMeanMeas-definitions.html">SystolicBloodPressure24HourMeanMeas</a><br/>
 </p>
 </div>
