fixed display names for extensions

--- a/pages/_includes/extensions.html
+++ b/pages/_includes/extensions.html
@@ -1,18 +1,18 @@
 <div>
 <p>This guide references the following extensions.</p>
 <p>
-<a href="StructureDefinition-AssociatedPreconditionExt-definitions.html">associatedPrecondition</a><br/>
-<a href="StructureDefinition-BodyPositionExt-definitions.html">bodyPosition</a><br/>
-<a href="StructureDefinition-BloodPressureCuffSizeExt-definitions.html">bpCuffSize</a><br/>
-<a href="StructureDefinition-DataAbsentReasonExt-definitions.html">dataAbsentReason</a><br/>
-<a href="StructureDefinition-DataOriginationModeExt-definitions.html">dataOriginationMode</a><br/>
-<a href="StructureDefinition-DeltaFlagExt-definitions.html">deltaFlag</a><br/>
-<a href="StructureDefinition-DeviceExt-definitions.html">device</a><br/>
-<a href="StructureDefinition-EstimatedIndExt-definitions.html">estimatedInd</a><br/>
-<a href="StructureDefinition-FocalSubjectExt-definitions.html">focalSubject</a><br/>
-<a href="StructureDefinition-MeasurementDeviceExt-definitions.html">measurementDevice</a><br/>
-<a href="StructureDefinition-MethodDeviceExt-definitions.html">methodDevice</a><br/>
-<a href="StructureDefinition-SensorDescriptionExt-definitions.html">sensorDescription</a><br/>
-<a href="StructureDefinition-SleepStatusExt-definitions.html">sleepStatus</a><br/>
+<a href="StructureDefinition-AssociatedPreconditionExt-definitions.html">AssociatedPreconditionExt</a><br/>
+<a href="StructureDefinition-BodyPositionExt-definitions.html">BodyPositionExt</a><br/>
+<a href="StructureDefinition-BloodPressureCuffSizeExt-definitions.html">BloodPressureCuffSizeExt</a><br/>
+<a href="StructureDefinition-DataAbsentReasonExt-definitions.html">DataAbsentReasonExt</a><br/>
+<a href="StructureDefinition-DataOriginationModeExt-definitions.html">DataOriginationModeExt</a><br/>
+<a href="StructureDefinition-DeltaFlagExt-definitions.html">DeltaFlagExt</a><br/>
+<a href="StructureDefinition-DeviceExt-definitions.html">DeviceExt</a><br/>
+<a href="StructureDefinition-EstimatedIndExt-definitions.html">EstimatedIndExt</a><br/>
+<a href="StructureDefinition-FocalSubjectExt-definitions.html">FocalSubjectExt</a><br/>
+<a href="StructureDefinition-MeasurementDeviceExt-definitions.html">MeasurementDeviceExt</a><br/>
+<a href="StructureDefinition-MethodDeviceExt-definitions.html">MethodDeviceExt</a><br/>
+<a href="StructureDefinition-SensorDescriptionExt-definitions.html">SensorDescriptionExt</a><br/>
+<a href="StructureDefinition-SleepStatusExt-definitions.html">SleepStatusExt</a><br/>
 </p>
 </div>
