--- a/pages/_includes/value-sets.html
+++ b/pages/_includes/value-sets.html
@@ -9,8 +9,8 @@
 <a href="ValueSet-bpCuffSizeVS.html">bpCuffSizeVS</a><br/>
 <a href="ValueSet-bpMeasDeviceVS.html">bpMeasDeviceVS</a><br/>
 <a href="ValueSet-bpMeasMethodVS.html">bpMeasMethodVS</a><br/>
-<a href="ValueSet-bpbodyposition.html">bpbodyposition</a><br/>
-<a href="ValueSet-bpmeasbodylocationprecoord.html">bpmeasbodylocationprecoord</a><br/>
+<a href="ValueSet-bpBodyPositionVS.html">bpBodyPositionVS</a><br/>
+<a href="ValueSet-bpMeasBodyLocationPrecoordVS.html">bpMeasBodyLocationPrecoordVS</a><br/>
 <a href="ValueSet-dataOriginationModeVS.html">dataOriginationModeVS</a><br/>
 <a href="ValueSet-definedLimitsVS.html">definedLimitsVS</a><br/>
 <a href="ValueSet-deltaFlagnumericNom.html">deltaFlagnumericNom</a><br/>
